--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<h1>Ronnie Nillo</h1>
 						<p>Front-End Web Developer (Wordpress)</p>
 						<ul class="ul-social">
-							<li><a href="assets/ronnienillo.pdf" download><i class="fa fa-paperclip fa-lg" aria-hidden="true"></i></a></li>
+							<li><a href="ronnienillo.pdf" download><i class="fa fa-paperclip fa-lg" aria-hidden="true"></i></a></li>
 							<li><a href="mailto:nilloronniecolayo@gmail.com"><i class="fa fa-envelope-square fa-lg" aria-hidden="true"></i></a></li>
 							<li><a href="https://github.com/ronnienillo/ronnienillo.github.io"><i class="fa fa-github-square fa-lg" aria-hidden="true"></i></a></li>
 						</ul>
