--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<ul class="ul-social">
 							<li><a href="ronnienillo.pdf" download><i class="fa fa-paperclip fa-lg" aria-hidden="true"></i></a></li>
 							<li><a href="mailto:nilloronniecolayo@gmail.com"><i class="fa fa-envelope-square fa-lg" aria-hidden="true"></i></a></li>
-							<li><a href="https://github.com/ronnienillo/ronnienillo.github.io"><i class="fa fa-github-square fa-lg" aria-hidden="true"></i></a></li>
+							<li><a href="https://github.com/ronnienillo/front-end-tools"><i class="fa fa-github-square fa-lg" aria-hidden="true"></i></a></li>
 						</ul>
 						<h3>Hi there!</h3>
 						<p>I'm a front-end web developer with 2 years of experience. I build responsive, high-performance websites, data-visualisations, interactives and web-apps. </p>
