--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-sm-3">
-						<h1>Ronnie Nillo</h1>
+						<h1 class="glitch">Ronnie Nillo</h1>
 						<p>Front-End Web Developer (Wordpress)</p>
 						<ul class="ul-social">
 							<li><a href="ronnienillo.pdf" download><i class="fa fa-paperclip fa-lg" aria-hidden="true"></i></a></li>
