--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 													</div>
 												</div>
 											</a>
-											<a href="http://www.lararjouren.se/">
+											<a href="#">
 												<div class="grid-sm">
-												<div class="img-bg" style="background-image: url(lib/img/lararjouren.png)"></div>
+												<div class="img-bg" style="background-image: url(lib/img/lano.png)"></div>
 													<div class="caption">
-														<h3>Lararjouren</h3>
+														<h3>Lano</h3>
 														<p>Information | blog</p>
 													</div>
 												</div>
@@ -92,12 +92,12 @@
 													</div>
 												</div>
 											</a>
-											<a href="http://www.lano.no/">
+											<a href="https://www.bilon.se/">
 												<div class="grid-lg">
-												<div class="img-bg" style="background-image: url(lib/img/lano.png)"></div>
+												<div class="img-bg" style="background-image: url(lib/img/bilon.jpg)"></div>
 													<div class="caption">
-														<h2>Lano</h2>
-														<p>Information | blog</p>
+														<h2>Bilon</h2>
+														<p>Financing</p>
 													</div>
 												</div>
 											</a>
