--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 			<meta name="description" content="Frontend Web Developer">
 			<meta name="author" content="Ronnie Nillo">
 			<!-- Bootstrap CSS -->
+						<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 			<link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
 			<link rel="icon" href="favicon.png">
 			<script src="https://use.fontawesome.com/e4972dadc8.js"></script>
-			<link rel="stylesheet" type="text/css" href="lib/css/main.css">
+			<link rel="stylesheet" type="text/css" href="lib/css/styles.css">
 			<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 			<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 			<!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
@@ -26,9 +27,9 @@
 						<h1>Ronnie Nillo</h1>
 						<p>Front-End Web Developer (Wordpress)</p>
 						<ul class="ul-social">
-							<li><a href="assets/ronnienillo.pdf" download><i class="fa fa-paperclip fa-lg" aria-hidden="true"></i></a></li>
+							<li><a href="ronnienillo.pdf" download><i class="fa fa-paperclip fa-lg" aria-hidden="true"></i></a></li>
 							<li><a href="mailto:nilloronniecolayo@gmail.com"><i class="fa fa-envelope-square fa-lg" aria-hidden="true"></i></a></li>
-							<li><a href="https://github.com/ronnienillo/ronnienillo.github.io"><i class="fa fa-github-square fa-lg" aria-hidden="true"></i></a></li>
+							<li><a href="https://github.com/ronnienillo/front-end-tools"><i class="fa fa-github-square fa-lg" aria-hidden="true"></i></a></li>
 						</ul>
 						<h3>Hi there!</h3>
 						<p>I'm a front-end web developer with 2 years of experience. I build responsive, high-performance websites, data-visualisations, interactives and web-apps. </p>
@@ -54,9 +55,9 @@
 											</a>
 											<a href="#">
 												<div class="grid-sm">
-												<div class="img-bg" style="background-image: url(lib/img/lano.png)"></div>
+												<div class="img-bg" style="background-image: url(lib/img/samarin.jpg)"></div>
 													<div class="caption">
-														<h3>Lano</h3>
+														<h3>Samarin</h3>
 														<p>Information | blog</p>
 													</div>
 												</div>
@@ -180,7 +181,6 @@
 			<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> -->
 
 			<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-	 		<script src="lib/js/bootstrap.min.js"></script>
 	 		<script src="lib/js/scripts.js"></script>
 		</body>
 	</html>
