--- a/index.html
+++ b/index.html
@@ -1,186 +1,206 @@
 <!DOCTYPE html>
-	<html lang="">
-		<head>
-			<meta charset="utf-8">
-			<meta http-equiv="X-UA-Compatible" content="IE=edge">
-			<meta name="viewport" content="width=device-width, initial-scale=1">
-			<title>Ronnie Nillo</title>
-			<meta name="description" content="Frontend Web Developer">
-			<meta name="author" content="Ronnie Nillo">
-			<!-- Bootstrap CSS -->
-			<link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
-			<link rel="icon" href="favicon.png">
-			<script src="https://use.fontawesome.com/e4972dadc8.js"></script>
-			<link rel="stylesheet" type="text/css" href="lib/css/main.css">
-			<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-			<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-			<!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
-		</head>
-		<body>
-			<div class="loader-wrap">
-				<div class="loader"></div>
-			</div>
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-sm-3">
-						<h1>Ronnie Nillo</h1>
-						<p>Front-End Web Developer (Wordpress)</p>
-						<ul class="ul-social">
-							<li><a href="assets/ronnienillo.pdf" download><i class="fa fa-paperclip fa-lg" aria-hidden="true"></i></a></li>
-							<li><a href="mailto:nilloronniecolayo@gmail.com"><i class="fa fa-envelope-square fa-lg" aria-hidden="true"></i></a></li>
-							<li><a href="https://github.com/ronnienillo/ronnienillo.github.io"><i class="fa fa-github-square fa-lg" aria-hidden="true"></i></a></li>
-						</ul>
-						<h3>Hi there!</h3>
-						<p>I'm a front-end web developer with 2 years of experience. I build responsive, high-performance websites, data-visualisations, interactives and web-apps. </p>
-						<p>My core toolset includes HTML, Sass, Less, Jquery, Grunt, Gulp, Git, SVN, WordPress and Photoshop.</p>
-						<p>I can write solid and well-organized code from scratch, and I have a passion for exploring new and emerging web technologies. I ensure that my projects are optimised, responsive, cross-browser compatible and accessible for users and search engines.</p>
-					</div>
-					<div class="col-sm-9">
-						<!-- grid portfolio starts here -->
-						<section class="portfolio">
-							<div class="grid-portfolio">
-								<!-- <h1 class="align-right container">My works</h1> -->
-								<div class="row grid">
-									<div class="col-sm-6">
-										<div class="row">
-											<a href="http://lilyandjack.se/">
-												<div class="grid-lg">
-												<div class="img-bg" style="background-image: url(lib/img/lily-and-jack.jpg)"></div>
-													<div class="caption">
-														<h2>Lily and jack</h2>
-														<p>Passions | blog</p>
-													</div>
-												</div>
-											</a>
-											<a href="http://www.lararjouren.se/">
-												<div class="grid-sm">
-												<div class="img-bg" style="background-image: url(lib/img/lararjouren.png)"></div>
-													<div class="caption">
-														<h3>Lararjouren</h3>
-														<p>Information | blog</p>
-													</div>
-												</div>
-											</a>
-											<a href="http://www.valedopartners.se/">
-												<div class="grid-sm">
-												<div class="img-bg" style="background-image: url(lib/img/valedo.jpg)"></div>
-													<div class="caption">
-														<h3>Valedo</h3>
-														<p>Travel | blog</p>
-													</div>
-												</div>
-											</a>
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="row">
-											<a href="#">
-												<div class="grid-sm">
-												<div class="img-bg" style="background-image: url(lib/img/pikasol_dk.jpg)"></div>
-													<div class="caption">
-														<h3>Pikasol DK</h3>
-														<p>Information| blog</p>
-													</div>
-												</div>
-											</a>
-											<a href="http://valerina.se/">
-												<div class="grid-sm">
-												<div class="img-bg" style="background-image: url(lib/img/valerina.jpg)"></div>
-													<div class="caption">
-														<h3>Valerina</h3>
-														<p>Information | blog</p>
-													</div>
-												</div>
-											</a>
-											<a href="http://www.lano.no/">
-												<div class="grid-lg">
-												<div class="img-bg" style="background-image: url(lib/img/lano.png)"></div>
-													<div class="caption">
-														<h2>Lano</h2>
-														<p>Information | blog</p>
-													</div>
-												</div>
-											</a>
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="row">
-											<a href="https://www.financebuddy.se/">
-												<div class="grid-lg">
-												<div class="img-bg" style="background-image: url(lib/img/financebuddy.jpg)"></div>
-													<div class="caption">
-														<h2>Finance buddy</h2>
-														<p>Financing</p>
-													</div>
-												</div>
-											</a>
-											<a href="#">
-												<div class="grid-sm">
-												<div class="img-bg" style="background-image: url(lib/img/mollers.jpg)"></div>
-													<div class="caption">
-														<h3>Mollers</h3>
-														<p>Infromation | blog</p>
-													</div>
-												</div>
-											</a>
-											<a href="http://www.curamed.no/">
-												<div class="grid-sm">
-												<div class="img-bg" style="background-image: url(lib/img/curamed.jpg)"></div>
-													<div class="caption">
-														<h3>Curamed</h3>
-														<p>Information | blog</p>
-													</div>
-												</div>
-											</a>
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="row">
-											<a href="#">
-												<div class="grid-sm">
-												<div class="img-bg" style="background-image: url(lib/img/zaralarsson.jpg)"></div>
-													<div class="caption">
-														<h3>Zara larsson</h3>
-														<p>Travel | blog | Events</p>
-													</div>
-												</div>
-											</a>
-											<a href="#">
-												<div class="grid-sm">
-												<div class="img-bg" style="background-image: url(lib/img/bra_omega3.jpg)"></div>
-													<div class="caption">
-														<h3>Bra Omega3</h3>
-														<p>Information | blog</p>
-													</div>
-												</div>
-											</a>
-											<a href="https://learn.mynewsdesk.com/en/">
-												<div class="grid-lg">
-												<div class="img-bg" style="background-image: url(lib/img/mnd.jpg)"></div>
-													<div class="caption">
-														<h2>My news desk learn</h2>
-														<p>Information</p> 
-													</div>
-												</div>
-											</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</section>
-					</div>
-				</div>
-			</div>
-			<footer class="container-fluid">
-				<p class="copy-right">© 2017 Ronnie nillo</p>
-			</footer>
-			<!-- jQuery -->
-			<script src="https://code.jquery.com/jquery-2.1.3.js"></script>
-			<!-- Bootstrap JavaScript -->
-			<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> -->
+<html lang="en">
+  <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Ronnie Nillo</title>
+	<meta name="description" content="Frontend Web Developer">
+	<meta name="author" content="Ronnie Nillo">
 
-			<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-	 		<script src="lib/js/bootstrap.min.js"></script>
-	 		<script src="lib/js/scripts.js"></script>
-		</body>
-	</html>
+    <!-- Bootstrap -->
+    <link rel="icon" href="favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Gloria+Hallelujah" rel="stylesheet">
+    <link href="https://use.fontawesome.com/e4972dadc8.css" media="all" rel="stylesheet">
+    <link href="lib/css/main.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <section class="container-fluid hero">
+    	<div class="row">
+    		<div class="col-sm-5 no-gutter">
+				<div class="hero-caption">
+					<div class="hero-caption__text">
+						<h1 class="h4">Hello</h1>
+		    			<h2 class="h1 text-uppercase">I'm</h2>
+		    			<h2 class="h1 text-uppercase">Ronnie</h2>
+		    			<h2 class="h1 text-uppercase">Nillo</h2>
+		    			<h3 class="text-uppercase">Front End Web Developer</h3>
+					</div>
+    			</div>
+    		</div>
+    		<div class="col-sm-7 no-gutter">
+    			<div class="hero-img" style="background-image: url('lib/img/img-hero.jpg');">
+    			</div>
+    		</div>
+
+    	</div>
+    </section>
+
+    <section class="about align-center">
+    	<div class="container">
+    		<div class="row">
+    			<div class="col-md-8 col-md-offset-2">
+    				<h2 class="">Hi There!</h2>
+    				<p>I'm a front-end web developer with 3 years of experience. I build responsive, high-performance websites, interactives and web-apps. </p>
+
+					<p>My core toolset includes HTML, Sass, Less, Jquery, Grunt, Gulp, Git, SVN, WordPress and Photoshop.</p>
+
+					<p>I can write solid and well-organized code from scratch, and I have a passion for exploring new and emerging web technologies. I ensure that my projects are optimised, responsive, cross-browser compatible and accessible for users and search engines.</p>
+    			</div>
+    		</div>
+    	</div>
+    </section>
+
+    <section class="portfolio">
+    	<div class="container">
+    		<h2 class="align-right">My Works</h2>
+    		<div class="row">
+    			<div class="col-xs-6 col-md-4">
+    				<a href="https://www.moulistockholm.com/">
+	    				<div class="card" style="background-image: url('lib/img/mouli.jpg');">
+	    					<div class="card__caption">
+	    						<div class="card__caption_text">
+	    							<h2>Mouli</h2>
+	    							<h4>E-commer | Passion | Blog</h4>
+	    						</div>
+	    					</div>
+	    				</div>
+    				</a>
+    			</div>
+    			<div class="col-xs-6 col-md-4">
+    				<a href="http://www.lano.no/">
+	    				<div class="card" style="background-image: url('lib/img/lano.png');">
+	    					<div class="card__caption">
+	    						<div class="card__caption_text">
+	    							<h2>Lano</h2>
+	    							<h4>Information | Blog</h4>
+	    						</div>
+	    					</div>
+	    				</div>
+    				</a>
+    			</div>
+    			<div class="col-xs-6 col-md-4">
+    				<a href="http://www.lilyandjack.se/">
+	    				<div class="card" style="background-image: url('lib/img/lily-and-jack.jpg');">
+	    					<div class="card__caption">
+	    						<div class="card__caption_text">
+	    							<h2>Lily & Jack</h2>
+	    							<h4>Passion | Blog</h4>
+	    						</div>
+	    					</div>
+	    				</div>
+    				</a>
+    			</div>
+    			<div class="col-xs-6 col-md-4">
+    				<a href="https://www.mountainworks.se/">
+	    				<div class="card" style="background-image: url('lib/img/mountainworks.jpg');">
+	    					<div class="card__caption">
+	    						<div class="card__caption_text">
+	    							<h2>Mountain works</h2>
+	    							<h4>E-commers | Blog</h4>
+	    						</div>
+	    					</div>
+	    				</div>
+    				</a>
+    			</div>
+    			<div class="col-xs-6 col-md-4">
+    				<a href="https://www.lararjouren.se/">
+	    				<div class="card" style="background-image: url('lib/img/lararjouren.png');">
+	    					<div class="card__caption">
+	    						<div class="card__caption_text">
+	    							<h2>Lararjouren</h2>
+	    							<h4>Educational | Blog</h4>
+	    						</div>
+	    					</div>
+	    				</div>
+    				</a>
+    			</div>
+    			<div class="col-xs-6 col-md-4">
+    				<a href="https://www.bilon.se/">
+	    				<div class="card" style="background-image: url('lib/img/bilon.jpg');">
+	    					<div class="card__caption">
+	    						<div class="card__caption_text">
+	    							<h2>Bilon</h2>
+	    							<h4>Rent a car</h4>
+	    						</div>
+	    					</div>
+	    				</div>
+    				</a>
+    			</div>
+    			<div class="col-xs-6 col-md-4">
+    				<a href="http://www.valedopartners.com/">
+	    				<div class="card" style="background-image: url('lib/img/valedo.jpg');">
+	    					<div class="card__caption">
+	    						<div class="card__caption_text">
+	    							<h2>Valedo</h2>
+	    							<h4>Travels | Blog</h4>
+	    						</div>
+	    					</div>
+	    				</div>
+    				</a>
+    			</div>
+    			<div class="col-xs-6 col-md-4">
+    				<a href="https://www.financebuddy.se/">
+	    				<div class="card" style="background-image: url('lib/img/financebuddy.jpg');">
+	    					<div class="card__caption">
+	    						<div class="card__caption_text">
+	    							<h2>Finance Buddy</h2>
+	    							<h4>Finance</h4>
+	    						</div>
+	    					</div>
+	    				</div>
+    				</a>
+    			</div>
+    			<div class="col-xs-6 col-md-4">
+    				<a href="https://www.drylake.com/">
+	    				<div class="card" style="background-image: url('lib/img/drylake.jpg');">
+	    					<div class="card__caption">
+	    						<div class="card__caption_text">
+	    							<h2>Drylake</h2>
+	    							<h4>E-commers | Passion | Blog</h4>
+	    						</div>
+	    					</div>
+	    				</div>
+    				</a>
+    			</div>
+    		</div>
+    	</div>
+    </section>
+    <footer class="align-center">
+    	<div class="container">
+    		<h2>Hit me here</h2>
+
+			<ul class="ul-social">
+				<li>
+					<a href="assets/ronnienillo.pdf" download="">
+						<i class="fa fa-paperclip fa-lg" aria-hidden="true"></i>
+					</a>
+				</li>
+				<li>
+					<a href="mailto:nilloronniecolayo@gmail.com">
+						<i class="fa fa-envelope-square fa-lg" aria-hidden="true"></i>
+					</a>
+				</li>
+				<li>
+					<a href="https://github.com/ronnienillo/ronnienillo.github.io">
+						<i class="fa fa-github-square fa-lg" aria-hidden="true"></i>
+					</a>
+				</li>
+			</ul>
+    		<p>Ronnie Nillo Copy Right 2017</p>
+    	</div>
+    </footer>		
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <!-- <script src="js/bootstrap.min.js"></script> -->
+  </body>
+</html>
