--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Dosis|Gloria+Hallelujah" rel="stylesheet">
     <link href="https://use.fontawesome.com/e4972dadc8.css" media="all" rel="stylesheet">
-    <link href="lib/css/main.css" rel="stylesheet">
+    <link href="lib/css/styles.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
