--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 			<ul class="ul-social">
 				<li>
-					<a href="assets/ronnienillo.pdf" download="">
+					<a href="ronnienillo.pdf" download="">
 						<i class="fa fa-paperclip fa-lg" aria-hidden="true"></i>
 					</a>
 				</li>
@@ -189,7 +189,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="https://github.com/ronnienillo/ronnienillo.github.io">
+					<a href="https://github.com/ronnienillo/front-end-tools">
 						<i class="fa fa-github-square fa-lg" aria-hidden="true"></i>
 					</a>
 				</li>
