--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <section class="portfolio">
     	<div class="container">
     		<h2 class="align-right">My Works</h2>
-    		<div class="row">
-    			<div class="col-xs-6 col-md-4">
+    		<div class="row grid">
+    			<div class="col-xs-6 col-md-4 grid-item">
     				<a href="https://www.moulistockholm.com/">
 	    				<div class="card" style="background-image: url('lib/img/mouli.jpg');">
 	    					<div class="card__caption">
@@ -74,7 +74,7 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-6 col-md-4">
+    			<div class="col-xs-6 col-md-4 grid-item">
     				<a href="http://www.lano.no/">
 	    				<div class="card" style="background-image: url('lib/img/lano.png');">
 	    					<div class="card__caption">
@@ -86,7 +86,7 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-6 col-md-4">
+    			<div class="col-xs-12 col-md-4 grid-item">
     				<a href="http://www.lilyandjack.se/">
 	    				<div class="card" style="background-image: url('lib/img/lily-and-jack.jpg');">
 	    					<div class="card__caption">
@@ -98,7 +98,7 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-6 col-md-4">
+    			<div class="col-xs-6 col-md-4 grid-item">
     				<a href="https://www.mountainworks.se/">
 	    				<div class="card" style="background-image: url('lib/img/mountainworks.jpg');">
 	    					<div class="card__caption">
@@ -110,7 +110,7 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-6 col-md-4">
+    			<div class="col-xs-6 col-md-4 grid-item">
     				<a href="https://www.lararjouren.se/">
 	    				<div class="card" style="background-image: url('lib/img/lararjouren.png');">
 	    					<div class="card__caption">
@@ -122,7 +122,7 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-6 col-md-4">
+    			<div class="col-xs-12 col-md-4 grid-item">
     				<a href="https://www.bilon.se/">
 	    				<div class="card" style="background-image: url('lib/img/bilon.jpg');">
 	    					<div class="card__caption">
@@ -134,7 +134,7 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-6 col-md-4">
+    			<div class="col-xs-6 col-md-4 grid-item">
     				<a href="http://www.valedopartners.com/">
 	    				<div class="card" style="background-image: url('lib/img/valedo.jpg');">
 	    					<div class="card__caption">
@@ -146,7 +146,7 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-6 col-md-4">
+    			<div class="col-xs-6 col-md-4 grid-item">
     				<a href="https://www.financebuddy.se/">
 	    				<div class="card" style="background-image: url('lib/img/financebuddy.jpg');">
 	    					<div class="card__caption">
@@ -158,7 +158,7 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-6 col-md-4">
+    			<div class="col-xs-12 col-md-4 grid-item">
     				<a href="https://www.drylake.com/">
 	    				<div class="card" style="background-image: url('lib/img/drylake.jpg');">
 	    					<div class="card__caption">
@@ -189,7 +189,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="https://github.com/ronnienillo/front-end-tools">
+					<a href="https://github.com/ronnienillo/ronnienillo.github.io">
 						<i class="fa fa-github-square fa-lg" aria-hidden="true"></i>
 					</a>
 				</li>
@@ -200,7 +200,15 @@
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- <script src="js/bootstrap.min.js"></script> -->
+    <script>
+    	$('.grid').masonry({
+		  // options...
+		  itemSelector: '.grid-item',
+		  //columnWidth: 200
+		});
+    </script>
   </body>
 </html>
