--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	    					<div class="card__caption">
 	    						<div class="card__caption_text">
 	    							<h2>Mouli</h2>
-	    							<h4>E-commer | Passion | Blog</h4>
+	    							<h4>E-commers | fashion | Blog</h4>
 	    						</div>
 	    					</div>
 	    				</div>
@@ -92,7 +92,7 @@
 	    					<div class="card__caption">
 	    						<div class="card__caption_text">
 	    							<h2>Lily & Jack</h2>
-	    							<h4>Passion | Blog</h4>
+	    							<h4>fashion | Blog</h4>
 	    						</div>
 	    					</div>
 	    				</div>
@@ -164,7 +164,7 @@
 	    					<div class="card__caption">
 	    						<div class="card__caption_text">
 	    							<h2>Drylake</h2>
-	    							<h4>E-commers | Passion | Blog</h4>
+	    							<h4>E-commers | fashion | Blog</h4>
 	    						</div>
 	    					</div>
 	    				</div>
