--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <![endif]-->
   </head>
   <body>
-    <section class="container-fluid hero">
+    <section class="container-fluid hero" id="home">
     	<div class="row">
     		<div class="col-sm-5 no-gutter">
 				<div class="hero-caption">
@@ -32,18 +32,24 @@
 		    			<h2 class="h1 text-uppercase">Ronnie</h2>
 		    			<h2 class="h1 text-uppercase">Nillo</h2>
 		    			<h3 class="text-uppercase">Front End Web Developer</h3>
+		    			<ul class="nav">
+		    				<li class="nav__list"><a href="#home"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+		    				<li class="nav__list"><a href="#about"><i class="fa fa-user-secret" aria-hidden="true"></i></a></li>
+		    				<li class="nav__list"><a href="#works"><i class="fa fa-th" aria-hidden="true"></i></a></li>
+		    				<li class="nav__list"><a href="#contact"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+		    			</ul>
 					</div>
     			</div>
     		</div>
     		<div class="col-sm-7 no-gutter">
-    			<div class="hero-img" style="background-image: url('lib/img/img-hero.jpg');">
+    			<div class="hero-img" style="background-image: url('lib/img/img-hero.webp');">
     			</div>
     		</div>
 
     	</div>
     </section>
 
-    <section class="about align-center">
+    <section class="about align-center" id="about">
     	<div class="container">
     		<div class="row">
     			<div class="col-md-8 col-md-offset-2">
@@ -58,13 +64,13 @@
     	</div>
     </section>
 
-    <section class="portfolio">
+    <section class="portfolio" id="works">
     	<div class="container">
     		<h2 class="align-right">My Works</h2>
     		<div class="row grid">
-    			<div class="col-xs-6 col-md-4 grid-item">
+    			<div class="col-xs-6 col-md-4 grid-item no-gutter">
     				<a href="https://www.moulistockholm.com/">
-	    				<div class="card" style="background-image: url('lib/img/mouli.jpg');">
+	    				<div class="card" style="background-image: url('lib/img/mouli.webp');">
 	    					<div class="card__caption">
 	    						<div class="card__caption_text">
 	    							<h2>Mouli</h2>
@@ -74,9 +80,9 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-6 col-md-4 grid-item">
+    			<div class="col-xs-6 col-md-4 grid-item no-gutter">
     				<a href="http://www.lano.no/">
-	    				<div class="card" style="background-image: url('lib/img/lano.png');">
+	    				<div class="card" style="background-image: url('lib/img/lano.webp');">
 	    					<div class="card__caption">
 	    						<div class="card__caption_text">
 	    							<h2>Lano</h2>
@@ -86,9 +92,9 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-12 col-md-4 grid-item">
+    			<div class="col-xs-12 col-md-4 grid-item no-gutter">
     				<a href="http://www.lilyandjack.se/">
-	    				<div class="card" style="background-image: url('lib/img/lily-and-jack.jpg');">
+	    				<div class="card" style="background-image: url('lib/img/lily-and-jack.webp');">
 	    					<div class="card__caption">
 	    						<div class="card__caption_text">
 	    							<h2>Lily & Jack</h2>
@@ -98,9 +104,9 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-6 col-md-4 grid-item">
+    			<div class="col-xs-6 col-md-4 grid-item no-gutter">
     				<a href="https://www.mountainworks.se/">
-	    				<div class="card" style="background-image: url('lib/img/mountainworks.jpg');">
+	    				<div class="card" style="background-image: url('lib/img/mountainworks.webp');">
 	    					<div class="card__caption">
 	    						<div class="card__caption_text">
 	    							<h2>Mountain works</h2>
@@ -110,9 +116,9 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-6 col-md-4 grid-item">
+    			<div class="col-xs-6 col-md-4 grid-item no-gutter">
     				<a href="https://www.bilon.se/">
-	    				<div class="card" style="background-image: url('lib/img/bilon.jpg');">
+	    				<div class="card" style="background-image: url('lib/img/bilon.webp');">
 	    					<div class="card__caption">
 	    						<div class="card__caption_text">
 	    							<h2>Bilon</h2>
@@ -122,9 +128,9 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-12 col-md-4 grid-item">
+    			<div class="col-xs-12 col-md-4 grid-item no-gutter">
     				<a href="https://www.lararjouren.se/">
-	    				<div class="card" style="background-image: url('lib/img/lararjouren.png');">
+	    				<div class="card" style="background-image: url('lib/img/lararjouren.webp');">
 	    					<div class="card__caption">
 	    						<div class="card__caption_text">
 	    							<h2>Lararjouren</h2>
@@ -134,9 +140,9 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-6 col-md-4 grid-item">
+    			<div class="col-xs-6 col-md-4 grid-item no-gutter">
     				<a href="http://www.valedopartners.com/">
-	    				<div class="card" style="background-image: url('lib/img/valedo.jpg');">
+	    				<div class="card" style="background-image: url('lib/img/valedo.webp');">
 	    					<div class="card__caption">
 	    						<div class="card__caption_text">
 	    							<h2>Valedo</h2>
@@ -146,9 +152,9 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-6 col-md-4 grid-item">
+    			<div class="col-xs-6 col-md-4 grid-item no-gutter">
     				<a href="https://www.financebuddy.se/">
-	    				<div class="card" style="background-image: url('lib/img/financebuddy.jpg');">
+	    				<div class="card" style="background-image: url('lib/img/financebuddy.webp');">
 	    					<div class="card__caption">
 	    						<div class="card__caption_text">
 	    							<h2>Finance Buddy</h2>
@@ -158,9 +164,9 @@
 	    				</div>
     				</a>
     			</div>
-    			<div class="col-xs-12 col-md-4 grid-item">
+    			<div class="col-xs-12 col-md-4 grid-item no-gutter">
     				<a href="https://www.drylake.com/">
-	    				<div class="card" style="background-image: url('lib/img/drylake.jpg');">
+	    				<div class="card" style="background-image: url('lib/img/drylake.webp');">
 	    					<div class="card__caption">
 	    						<div class="card__caption_text">
 	    							<h2>Drylake</h2>
@@ -173,7 +179,7 @@
     		</div>
     	</div>
     </section>
-    <footer class="align-center">
+    <footer class="align-center" id="contact">
     	<div class="container">
     		<h2>Hit me here</h2>
 
