--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Ronnie Nillo</title>
 	<meta name="description" content="Frontend Web Developer">
 	<meta name="author" content="Ronnie Nillo">
+	<meta name="theme-color" content="#ebebeb">
 
     <!-- Bootstrap -->
     <link rel="icon" href="favicon.png">
