--- a/index.html
+++ b/index.html
@@ -26,14 +26,17 @@
     <section class="container-fluid hero" id="home">
     	<div class="row">
     		<div class="col-sm-5 no-gutter">
-				<div class="hero-caption">
-					<div class="hero-caption__text">
-						<h1 class="h4">Hello</h1>
-						<h2 class="h1 text-uppercase">I'm</h2>
-						<h2 class="h1 text-uppercase">Ronnie</h2>
-						<h2 class="h1 text-uppercase">Nillo</h2>
-						<h3 class="text-uppercase">Front End Web Developer</h3>
-					</div>
+			<div class="hero-caption">
+				<div class="hero-caption__text">
+					<h1 class="text-uppercase">Ronnie Nillo</h1>
+					<h2 class="h4 text-uppercase">Front End Web Developer</h2>
+					<ul class="nav">
+						<li class="nav__list"><a href="#home"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+						<li class="nav__list"><a href="#about"><i class="fa fa-user-secret" aria-hidden="true"></i></a></li>
+						<li class="nav__list"><a href="#works"><i class="fa fa-th" aria-hidden="true"></i></a></li>
+						<li class="nav__list"><a href="#contact"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+					</ul>
+				</div>
     			</div>
     		</div>
     		<div class="col-sm-7 no-gutter">
