--- a/index.html
+++ b/index.html
@@ -207,12 +207,6 @@
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- <script src="js/bootstrap.min.js"></script> -->
-    <script>
-    	$('.grid').masonry({
-		  // options...
-		  itemSelector: '.grid-item',
-		  //columnWidth: 200
-		});
-    </script>
+    <script src="lib/js/scripts.js"></script>
   </body>
 </html>
