--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 					<h1 class="text-uppercase">Ronnie Nillo</h1>
 					<h2 class="h4 text-uppercase">Front End Web Developer</h2>
 					<ul class="nav">
-						<li class="nav__list"><a href="#home"><i class="fa fa-home" aria-hidden="true"></i></a></li>
-						<li class="nav__list"><a href="#about"><i class="fa fa-user-secret" aria-hidden="true"></i></a></li>
-						<li class="nav__list"><a href="#works"><i class="fa fa-th" aria-hidden="true"></i></a></li>
-						<li class="nav__list"><a href="#contact"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+						<li class="nav__list"><a href="#home"><i class="fa fa-home" aria-hidden="true"  data-toggle="tooltip" title="Home"></i></a></li>
+						<li class="nav__list"><a href="#about"><i class="fa fa-user-secret" aria-hidden="true"  data-toggle="tooltip" title="About"></i></a></li>
+						<li class="nav__list"><a href="#works"><i class="fa fa-th" aria-hidden="true"  data-toggle="tooltip" title="My works"></i></a></li>
+						<li class="nav__list"><a href="#contact"><i class="fa fa-phone" aria-hidden="true"  data-toggle="tooltip" title="Contact"></i></a></li>
 					</ul>
 				</div>
     			</div>
