--- a/index.html
+++ b/index.html
@@ -208,5 +208,10 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- <script src="js/bootstrap.min.js"></script> -->
     <script src="lib/js/scripts.js"></script>
+    <script>
+      $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();    
+      });
+    </script>
   </body>
 </html>
