--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 					<h1 class="text-uppercase">Ronnie Nillo</h1>
 					<h2 class="h4 text-uppercase">Front End Web Developer</h2>
 					<ul class="nav">
-						<li class="nav__list"><a href="#home"><i class="fa fa-home" aria-hidden="true"  data-toggle="tooltip" title="Home"></i></a></li>
-						<li class="nav__list"><a href="#about"><i class="fa fa-user-secret" aria-hidden="true"  data-toggle="tooltip" title="About"></i></a></li>
-						<li class="nav__list"><a href="#works"><i class="fa fa-th" aria-hidden="true"  data-toggle="tooltip" title="My works"></i></a></li>
-						<li class="nav__list"><a href="#contact"><i class="fa fa-phone" aria-hidden="true"  data-toggle="tooltip" title="Contact"></i></a></li>
+						<li class="nav__list"><a href="#home" data-toggle="tooltip" title="Home"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+						<li class="nav__list"><a href="#about" data-toggle="tooltip" title="About"><i class="fa fa-user-secret" aria-hidden="true"></i></a></li>
+						<li class="nav__list"><a href="#works" data-toggle="tooltip" title="My works"><i class="fa fa-th" aria-hidden="true"></i></a></li>
+						<li class="nav__list"><a href="#contact"  data-toggle="tooltip" title="Contact"><i class="fa fa-phone" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
     			</div>
@@ -183,17 +183,17 @@
 
 			<ul class="ul-social">
 				<li>
-					<a href="ronnienillo.pdf" download="">
+					<a href="ronnienillo.pdf" download=""  data-toggle="tooltip" title="Download CV">
 						<i class="fa fa-paperclip fa-lg" aria-hidden="true"></i>
 					</a>
 				</li>
 				<li>
-					<a href="mailto:nilloronniecolayo@gmail.com">
+					<a href="mailto:nilloronniecolayo@gmail.com"  data-toggle="tooltip" title="E-mail">
 						<i class="fa fa-envelope-square fa-lg" aria-hidden="true"></i>
 					</a>
 				</li>
 				<li>
-					<a href="https://github.com/ronnienillo/ronnienillo.github.io">
+					<a href="https://github.com/ronnienillo/ronnienillo.github.io"  data-toggle="tooltip" title="Github channel">
 						<i class="fa fa-github-square fa-lg" aria-hidden="true"></i>
 					</a>
 				</li>
