--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Dosis|Gloria+Hallelujah" rel="stylesheet">
     <link href="https://use.fontawesome.com/e4972dadc8.css" media="all" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="lib/css/styles.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vue"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -101,8 +101,8 @@
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- <script src="js/bootstrap.min.js"></script> -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="lib/js/bootstrap.min.js"></script>
+    <script src="lib/js/scripts.js"></script>
     <script>
       $(document).ready(function(){
         $('[data-toggle="tooltip"]').tooltip();    
