--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <![endif]-->
   </head>
   <body>
-    <div id="vue-app">
+<!--     <div id="vue-app">
         <section class="container-fluid hero" id="home">
             <div class="row">
                 <div class="col-sm-5 no-gutter">
@@ -93,7 +93,7 @@
                 <p>{{copyRight}}</p>
             </div>
         </footer>  
-    </div>
+    </div> -->
      
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -111,4 +111,3 @@
     </script>
   </body>
 </html>
-
