--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="row grid" v-if="showLess">
                     <div v-for="card in cards.slice(0, 6)" class="card-grid col-xs-6 col-md-4 grid-item no-gutter">
-                        <a :href="card.websiteurl" target="_blank"> 
+                        <a :href="card.websiteurl" target="_blank" rel="noopener"> 
                             <div class="card" :style="{ 'background-image': 'url(' + card.cardImg + ')' }">
                                 <div class="card__caption">
                                     <div class="card__caption_text">
@@ -78,7 +78,7 @@
                 </div>
                 <div class="row grid" v-else>
                     <div v-for="card in cards" class="card-grid col-xs-6 col-md-4 grid-item no-gutter">
-                        <a :href="card.websiteurl" target="_blank"> 
+                        <a :href="card.websiteurl" target="_blank" rel="noopener"> 
                             <div class="card" :style="{ 'background-image': 'url(' + card.cardImg + ')' }">
                                 <div class="card__caption">
                                     <div class="card__caption_text">
