--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Dosis|Gloria+Hallelujah" rel="stylesheet">
     <link href="https://use.fontawesome.com/e4972dadc8.css" media="all" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="manifest.json" rel="manifest">
     
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
