--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h3 class="content"></h3>
             </div>
             <div class="row">
-                <div class="col-sm-5 no-gutter">
+                <div class="col-xs-12 col-sm-5 no-gutter">
                 <div class="hero-caption">
                     <div class="hero-caption__text">
                         <h1 class="text-uppercase" v-cloak>{{name}}</h1>
@@ -43,7 +43,7 @@
                     </div>
                     </div>
                 </div>
-                <div class="col-sm-7 no-gutter">
+                <div class="hidden-xs col-sm-7 no-gutter">
                     <div class="hero-img" :style="{ 'background-image': 'url(' + hero + ')' }">
                         <div class="before"></div>
                     </div>
