--- a/index.html
+++ b/index.html
@@ -129,7 +129,17 @@
     <script src="js/app.js"></script>
     <script>
         $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();   
+            $('[data-toggle="tooltip"]').tooltip();
+            var is_opera = !!window.opera || navigator.userAgent.indexOf(' OPR/') >= 0;
+            var is_Edge = navigator.userAgent.indexOf("Edge") > -1;
+            var is_chrome = !!window.chrome && !is_opera && !is_Edge;
+            var is_explorer= typeof document !== 'undefined' && !!document.documentMode && !is_Edge;
+            var is_firefox = typeof window.InstallTrigger !== 'undefined';
+            var is_safari = /^((?!chrome|android).)*safari/i.test(navigator.userAgent);
+
+            if (is_safari){
+                console.log('Safari');
+            }
             // new Nav();
             const btn = document.querySelector('.talk');
             const content = document.querySelector('.content');
