--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 
             if (is_safari){
                 $('.mode-wrap').hide();
+                console.log('safari');
             }
      
             // new Nav();
