--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             var is_firefox = typeof window.InstallTrigger !== 'undefined';
             var is_safari = /^((?!chrome|android).)*safari/i.test(navigator.userAgent);
 
-            if (is_chrome){
+            if (is_safari){
                 $('.mode-wrap').hide();
                 console.log('safari');
             }
